--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,12 @@
 @import './blocks/page';
 @import './blocks/header';
 @import './blocks/icon';
+@import './blocks/main';
+@import './blocks/section-title';
+@import './blocks/events';
+@import './blocks/exhibition';
+@import './blocks/lection';
+@import './blocks/gallery';
 
 body {
   background: $c-gray;
