--- a/styles/blocks/page.scss
+++ b/styles/blocks/page.scss
@@ -1,12 +1,20 @@
 .page {
+  scroll-behavior: smooth;
   &__body {
     margin: 0;
     min-width: 320px;
     font-family: 'Montserrat', serif;
-    scroll-behavior: smooth;
   }
 
   &__header {
-    position: relative;
+    // position: relative;
   }
+}
+
+.page:has(.header__dropdown:target) {
+  overflow: hidden; /* not to scroll the page */
+}
+
+.page:has(.header__dropdown:target)::-webkit-scrollbar {
+  display: block; /* Це забезпечує, що скроллбар буде видимим */
 }
