added next sections and swiper for gallery

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,7 +11,9 @@
 @import './blocks/exhibition';
 @import './blocks/lection';
 @import './blocks/gallery';
+@import './blocks/swiper';
 
 body {
   background: $c-gray;
+  overflow-x: hidden;
 }
