added all sections except footer

--- a/styles/blocks/header.scss
+++ b/styles/blocks/header.scss
@@ -270,17 +270,18 @@
     align-items: center;
     justify-content: center;
     @include on-tablet {
-      width: 58.8%;
+      width: 45%;
+      max-width: 200px;
       height: 72px;
     }
     @include on-desktop {
-      width: 23.4%;
+      width: 24%;
       height: 72px;
     }
   }
 
-  &___logo-image {
-    display: block;
+  &__logo-image {
+    // display: block;
     width: 58px;
     height: 63px;
   }
@@ -371,26 +372,32 @@
     justify-content: center;
     text-transform: uppercase;
     color: #0f0e08;
-    padding-block: 18px;
+    padding-block: 14.2px;
     padding-right: 50px;
 
     @include on-tablet {
-      padding-block: 27px;
+      padding-block: 24.2px;
       padding-right: 70px;
     }
 
     &::after {
       content: '';
       position: absolute;
-      background-image: url(../icons/tickets-button-icon.png);
+      background-image: url(../icons/tickets-button-icon-2x.png);
       background-repeat: no-repeat;
       background-position: center;
+      background-size: 7.41px 12px;
       display: block;
       top: 0;
       right: 0;
-      width: 70px;
+      width: 50px;
+      // height: 50px;
       height: 100%;
       background-color: #1a5a4c;
+
+      @include on-tablet {
+        width: 70px;
+      }
     }
   }
 
