--- a/styles/blocks/section-title.scss
+++ b/styles/blocks/section-title.scss
@@ -19,4 +19,14 @@
     // margin-top: 120px;
     margin-bottom: 56px;
   }
+
+  &--subscription {
+    color: #fff;
+    margin-bottom: 20px;
+
+    @include on-tablet {
+      text-align: center;
+      margin-bottom: 16px;
+    }
+  }
 }
