--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,8 +12,39 @@
 @import './blocks/lection';
 @import './blocks/gallery';
 @import './blocks/swiper';
+@import './blocks/subscribe';
 
 body {
   background: $c-gray;
   overflow-x: hidden;
+}
+
+form,
+input,
+button {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  background: none;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  font: inherit;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 0 1000px #f9f9f9 inset;
+  box-shadow: 0 0 0 1000px #f9f9f9 inset;
+  color: #1b2129;
 }
