finished implementing layout for all devices

--- a/styles/blocks/header.scss
+++ b/styles/blocks/header.scss
@@ -411,11 +411,12 @@
     display: none;
     align-items: center;
     text-decoration: none;
-    // bottom: 10%;
     bottom: 65px;
     left: 0.01%;
     transform: rotate(-90deg);
     cursor: pointer;
+    animation: bounce 1s ease-out 4;
+    animation-delay: 2s;
 
     @include on-desktop {
       display: flex;
@@ -438,6 +439,7 @@
       color: #687480;
       font-size: 14px;
       line-height: 100%;
+      font-weight: 600;
     }
   }
 }
