--- a/styles/blocks/page.scss
+++ b/styles/blocks/page.scss
@@ -6,15 +6,12 @@
     font-family: 'Montserrat', serif;
   }
 
-  &__header {
-    // position: relative;
+  // No scroll when dropdown opened
+  &--no-scroll {
+    overflow: hidden;
   }
 }
 
-.page:has(.header__dropdown:target) {
-  overflow: hidden; /* not to scroll the page */
-}
-
-.page:has(.header__dropdown:target)::-webkit-scrollbar {
-  display: block; /* Це забезпечує, що скроллбар буде видимим */
-}
+// .page:has(.header__dropdown:target) {
+//   overflow: hidden;
+// }
