--- a/styles/blocks/subscribe.scss
+++ b/styles/blocks/subscribe.scss
@@ -36,9 +36,7 @@
   }
 
   &__text {
-    font-family:
-      IBM Plex Sans,
-      serif;
+    font-family: 'IBM Plex Sans', serif;
     color: #fff;
     text-align: center;
     font-size: 18px;
@@ -74,7 +72,6 @@
   &__form-email {
     display: inline-block;
     color: #687480;
-    // width: 100%;
     height: 50px;
     padding-left: 24px;
     background-color: #fff;
