--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -51,3 +51,25 @@
   opacity: 0;
   transition: opacity 0.3s ease-out;
 }
+
+@keyframes bounce {
+  0%,
+  10% {
+    transform: rotate(-90deg) translateX(0);
+  }
+  20% {
+    transform: rotate(-90deg) translateX(-5px);
+  }
+  30% {
+    transform: rotate(-90deg) translateX(0);
+  }
+  40% {
+    transform: rotate(-90deg) translateX(-3px);
+  }
+  50% {
+    transform: rotate(-90deg) translateX(0);
+  }
+  100% {
+    transform: rotate(-90deg) translateX(0);
+  }
+}
