--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,6 +13,7 @@
 @import './blocks/gallery';
 @import './blocks/swiper';
 @import './blocks/subscribe';
+@import './blocks/footer';
 
 body {
   background: $c-gray;
