--- a/src/styles/blocks/following.scss
+++ b/src/styles/blocks/following.scss
@@ -101,6 +101,7 @@
       font-family: $Montserrat-font;
       font-size: 14px;
       line-height: 14px;
+      border-radius: 0%;
 
       &:focus {
         outline: none;
