added variables to typography.scss

--- a/styles/blocks/footer.scss
+++ b/styles/blocks/footer.scss
@@ -87,9 +87,9 @@
 
   &__schedule-title {
     margin: 0;
-    font-family: 'IBM Plex Sans', serif;
-    color: #0f0e08;
-    font-size: 14px;
+    font-family: $font-secondary;
+    color: $text-color-dark;
+    font-size: $fs-small;
     margin-bottom: 20px;
   }
 
@@ -99,11 +99,11 @@
   }
 
   &__schedule-item {
-    font-family: 'IBM Plex Sans', serif;
+    font-family: $font-secondary;
     list-style: none;
-    font-size: 14px;
-    line-height: 21px;
-    color: #0f0e08;
+    font-size: $fs-small;
+    line-height: $lh-small;
+    color: $text-color-dark;
 
     &--weekends {
       margin-top: 20px;
@@ -123,11 +123,11 @@
   }
 
   &__contacts-title {
-    font-family: 'IBM Plex Sans', serif;
+    font-family: $font-secondary;
     margin: 0;
     margin-bottom: 20px;
-    font-size: 14px;
-    color: #0f0e08;
+    font-size: $fs-small;
+    color: $text-color-dark;
   }
 
   &__contacts-content {
@@ -137,14 +137,14 @@
 
   &__contacts-contact {
     list-style: none;
-    font-size: 14px;
-    line-height: 21px;
-    color: #0f0e08;
+    font-size: $fs-small;
+    line-height: $lh-small;
+    color: $text-color-dark;
   }
 
   &__contacts-link {
     text-decoration: none;
-    color: #0f0e08;
+    color: $text-color-dark;
   }
 
   &__go-up-button_wrapper {
@@ -163,7 +163,7 @@
     text-decoration: none;
     width: 50px;
     height: 50px;
-    border: 1px solid #1a5a4c;
+    border: 1px solid $accent-color;
     border-radius: 50%;
     background-image: url(../images/arrow-up.png);
     background-size: 16px;
@@ -219,9 +219,9 @@
 
   &__nav-link-1 {
     text-decoration: none;
-    font-size: 14px;
-    line-height: 14px;
-    color: #0f0e08;
+    font-size: $fs-small;
+    line-height: $lh-tight;
+    color: $text-color-dark;
   }
 
   &__nav-2 {
@@ -247,9 +247,9 @@
 
   &__nav-link-2 {
     text-decoration: none;
-    font-size: 14px;
-    line-height: 14px;
-    color: #0f0e08;
+    font-size: $fs-small;
+    line-height: $lh-tight;
+    color: $text-color-dark;
   }
 
   &__page-info {
@@ -258,8 +258,8 @@
     gap: 10px;
     align-items: center;
     grid-column: span 2;
-    font-size: 12px;
-    line-height: 140%;
+    font-size: $fs-smaller;
+    line-height: $lh-relaxed;
     margin-top: 80px;
 
     @include on-tablet {
