--- a/styles/blocks/lection.scss
+++ b/styles/blocks/lection.scss
@@ -32,7 +32,7 @@
     height: 140px;
     background-color: #fff;
     background-clip: content-box;
-    filter: drop-shadow(0px 2px 0px 0px #1a5a4c40);
+    // filter: drop-shadow(0px 2px 0px 0px $accent-color40);
 
     @include on-tablet {
       height: 204px;
@@ -41,6 +41,9 @@
     }
 
     @include on-desktop {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transform: translateY(-50%);
       height: 204px;
       padding-inline: 355px;
@@ -61,37 +64,36 @@
     }
 
     @include on-desktop {
-      align-items: center;
+      // align-items: center;
       padding-left: 0;
     }
   }
 
   &__label {
     display: flex;
-    font-family:
-      IBM Plex Sans,
-      sans-serif;
-    font-size: 16px;
-    line-height: 16px;
+    font-family: $font-secondary;
+    font-size: $fs-base;
+    line-height: $lh-tight;
     gap: 26px;
     margin-top: 24px;
 
     @include on-tablet {
       justify-content: start;
-      font-size: 14px;
+      font-size: $fs-small;
       gap: 140px;
       margin-top: 45px;
     }
 
     @include on-desktop {
+      margin-top: 0; //hj
       gap: 130px;
     }
   }
 
   &__text {
     display: inline-block;
-    color: #687480;
-    font-weight: 500;
+    color: $text-color-light;
+    font-weight: $fw-medium;
 
     text-transform: uppercase;
     margin: 0;
@@ -99,24 +101,24 @@
 
   &__date {
     display: inline-block;
-    font-weight: 700;
-    color: #1a5a4c;
+    font-weight: $fw-bold;
+    color: $accent-color;
     margin: 0;
   }
 
   &__name {
-    font-family: Montserrat, serif;
-    font-size: 28px;
-    line-height: 28px;
-    color: #0f0e08;
+    font-family: $font-primary;
+    font-size: $fs-large;
+    line-height: $lh-tight;
+    color: $text-color-dark;
     margin: 0;
-    font-weight: 400;
+    font-weight: $fw-normal;
     text-align: center;
     margin-top: 20px;
 
     @include on-tablet {
-      font-size: 36px;
-      line-height: 36px;
+      font-size: $fs-larger;
+      line-height: $lh-heading;
       text-align: left;
     }
   }
