--- a/styles/blocks/page.scss
+++ b/styles/blocks/page.scss
@@ -3,7 +3,7 @@
   &__body {
     margin: 0;
     min-width: 320px;
-    font-family: 'Montserrat', serif;
+    font-family: $font-primary;
   }
 
   // No scroll when dropdown opened
