--- a/styles/blocks/section-title.scss
+++ b/styles/blocks/section-title.scss
@@ -1,7 +1,7 @@
 .section-title {
-  font-family: Montserrat;
-  font-size: 36px;
-  line-height: 36px;
+  font-family: $font-primary;
+  font-size: $fs-large;
+  line-height: $lh-heading;
   margin: 0;
   text-align: center;
   // margin-top: 70px;
@@ -12,7 +12,7 @@
     margin-bottom: 48px;
     text-align: left;
     font-size: 48px;
-    line-height: 48px;
+    line-height: $lh-tight;
   }
 
   @include on-desktop {
