--- a/styles/blocks/subscribe.scss
+++ b/styles/blocks/subscribe.scss
@@ -36,11 +36,11 @@
   }
 
   &__text {
-    font-family: 'IBM Plex Sans', serif;
+    font-family: $font-secondary;
     color: #fff;
     text-align: center;
     font-size: 18px;
-    line-height: 27px;
+    line-height: $lh-loose;
     margin: 0;
     margin-bottom: 50px;
 
@@ -54,11 +54,11 @@
   }
 
   &__form {
-    font-family: Montserrat, serif;
+    font-family: $font-primary;
     position: relative;
     display: flex;
     width: 100%;
-    font-size: 14px;
+    font-size: $fs-small;
 
     @include on-tablet {
       gap: 16px;
@@ -71,7 +71,7 @@
 
   &__form-email {
     display: inline-block;
-    color: #687480;
+    color: $text-color-light;
     height: 50px;
     padding-left: 24px;
     background-color: #fff;
@@ -87,7 +87,7 @@
   }
 
   &__button {
-    background-color: #f14a27;
+    background-color: $rectangle-color;
     background-image: url(../icons/form-button-icon.png);
     background-size: 7.41px 12px;
     background-repeat: no-repeat;
