--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/dropdown';
 @import './blocks/backdrop';
 @import './blocks/page';
 @import './blocks/header';
