--- a/styles/blocks/exhibition.scss
+++ b/styles/blocks/exhibition.scss
@@ -38,15 +38,13 @@
   &__label {
     display: flex;
     justify-content: space-between;
-    font-family:
-      IBM Plex Sans,
-      sans-serif;
-    font-size: 16px;
-    line-height: 16px;
+    font-family: $font-secondary;
+    font-size: $fs-base;
+    line-height: $lh-tight;
 
     @include on-tablet {
       justify-content: start;
-      font-size: 14px;
+      font-size: $fs-small;
       gap: 28px;
     }
   }
@@ -69,8 +67,8 @@
 
   &__text {
     display: inline-block;
-    color: #687480;
-    font-weight: 500;
+    color: $text-color-light;
+    font-weight: $fw-medium;
 
     text-transform: uppercase;
     margin: 0;
@@ -78,25 +76,25 @@
 
   &__date {
     display: inline-block;
-    font-weight: 700;
-    color: #1a5a4c;
+    font-weight: $fw-bold;
+    color: $accent-color;
     margin: 0;
   }
 
   &__name {
     // position: relative;
-    font-family: Montserrat, serif;
-    font-size: 28px;
-    line-height: 28px;
-    color: #0f0e08;
+    font-family: $font-primary;
+    font-size: $fs-large;
+    line-height: $lh-tight;
+    color: $text-color-dark;
     margin: 0;
-    font-weight: 400;
+    font-weight: $fw-normal;
     margin-top: 10px;
 
     @include on-tablet {
       margin-top: 30px;
-      font-size: 36px;
-      line-height: 36px;
+      font-size: $fs-larger;
+      line-height: $lh-heading;
     }
 
     &:after {
@@ -107,7 +105,7 @@
       content: '';
       height: 10px;
       width: 10px;
-      background-color: #f14a27;
+      background-color: $rectangle-color;
 
       @include on-tablet {
         height: 15px;
@@ -119,8 +117,8 @@
 
   &__description {
     color: #4e4e4e;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: $fs-base;
+    line-height: $lh-base;
     margin: 0;
     margin-top: 10px;
 
