--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -4,10 +4,19 @@
 
   display: flex;
   align-items: center;
-  justify-content: end;
+
+  @include on-tablet {
+    height: 70px;
+    max-width: 270px;
+  }
+
+  @include on-desktop {
+    margin-left: auto;
+  }
 
   &__text {
     @include font-ibm-plex-sans-medium;
+
     font-size: 16px;
     line-height: 16px;
     text-transform: uppercase;
@@ -19,5 +28,10 @@
     width: 50px;
     background-color: $primary-green;
     cursor: pointer;
+
+    @include on-tablet {
+      height: 70px;
+      width: 70px;
+    }
   }
 }
