--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -10,19 +10,20 @@
 
   opacity: 0;
   pointer-events: none;
+  z-index: 3;
 
-  &::before {
+  /* ::before {
     content: "";
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: 399px;
     left: 0;
     width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0;
     pointer-events: none;
-    opacity: 1;
-    z-index: 1;
-  }
+    z-index: -1;
+  } */
 
   &:target {
     opacity: 1;
