--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -6,8 +6,20 @@
   }
 }
 
+@mixin on-small-tablet {
+  @media (min-width: $tablet-small-min-width) {
+    @content;
+  }
+}
+
 @mixin on-tablet {
   @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-small-desktop {
+  @media (min-width: $desktop-small-min-width) {
     @content;
   }
 }
@@ -29,6 +41,24 @@
     padding-inline: 55px;
     max-width: 1280px;
     margin: 0 auto;
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: 6;
+
+    column-gap: 24px;
+  }
+
+  @include on-desktop {
+    --columns: 12;
   }
 }
 
