--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,6 +1,7 @@
 @import 'blocks/page';
 @import 'blocks/header';
 @import 'blocks/menu';
-@import 'blocks/nav';
 @import 'blocks/icons';
 @import 'blocks/button';
+@import 'blocks/events';
+@import 'blocks/event';
