--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,28 +1,51 @@
 .menu {
   height: 399px;
   background-color: $primary-green;
-  z-index: 2;
   color: #fff;
+  z-index: 5;
+
+  @include on-tablet {
+    height: 225px;
+  }
+
+  &__container {
+    @include on-tablet {
+      display: flex;
+      flex-direction: row;
+      padding-top: 40px;
+    }
+  }
 
   &__header {
-    padding: 27px 0 24px;
+    padding: 27px 38px 24px 57px;
     display: flex;
+    position: relative;
     gap: 28px;
     color: #fff;
     border-bottom: 1px solid #fff;
+
+    @include on-tablet {
+      padding: 0 38px 24px 57px;
+      border-bottom: none;
+      border-right: 1px solid #fff;
+    }
+
+    @include on-small-desktop {
+      padding: 0 102px 0 127px;
+    }
 
     .nav {
       &__list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 24px;
-        grid-row-gap: 28px;
+        grid-gap: 24px 28px;
       }
 
 
       &__link {
         @include font-ibm-plex-sans-medium;
 
+        font-size: 16px;
         line-height: 16px;
         color: #fff;
 
@@ -30,12 +53,46 @@
     }
   }
 
+  &__icon {
+    position: absolute;
+    top: 27px;
+    left: 0;
+
+    @include on-tablet {
+      top: 0;
+      left: -5px;
+    }
+  }
+
+  &__shedule-wrapper {
+    @include on-tablet {
+      display: flex;
+      flex-direction: row;
+      column-gap: 26px;
+      padding-left: 38px;
+    }
+
+    @include on-small-desktop {
+      padding-left: 70px;
+    }
+
+    @include on-desktop {
+      padding-left: 102px;
+    }
+  }
+
   &__schedule {
     @include font-ibm-plex-sans-regular;
 
-    padding-top: 24px;
+
+    min-width: 170px;
+    margin-top: 24px;
     font-size: 14px;
     line-height: 21px;
+
+    @include on-tablet {
+      margin-top: 0;
+    }
 
     &--title {
       margin-bottom: 20px;
@@ -47,7 +104,36 @@
 
     &--summary {
       margin-top: 16px;
+
+      @include on-tablet {
+        margin-top: 41px;
+        width: 144px;
+        line-height: 21px;
+      }
     }
   }
+}
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+}
+
+.menu:target~.overlay {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.overlay a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
