final version of landing

--- a/src/styles/blocks/backdrop.scss
+++ b/src/styles/blocks/backdrop.scss
@@ -4,14 +4,13 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5); /* Напівпрозорий чорний */
+  background: rgba(0, 0, 0, 0.5);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease;
-  z-index: 5; /* Нижче дропдауну, але над контентом */
+  z-index: 5;
 }
 
-/* Коли бекдроп активний */
 .backdrop--active {
   opacity: 1;
   visibility: visible;
