--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -18,6 +18,8 @@
     background-position: center 30%;
     height: 210px;
 
+    @include photo-hover-scaling;
+
     @include on-tablet {
       grid-column: span 6;
       height: 520px;
@@ -84,7 +86,6 @@
   }
 
   &__name {
-    // position: relative;
     font-family: $font-primary;
     font-size: $fs-large;
     line-height: $lh-tight;
