--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -32,6 +32,8 @@
   &__logo-site {
     display: block;
     text-decoration: none;
+
+    @include photo-hover-scaling;
   }
 
   &__logo-site-image {
@@ -55,6 +57,8 @@
   &__logo-fb {
     display: block;
     text-decoration: none;
+
+    @include socials-logo-hover-scaling;
   }
 
   &__logo-fb-image {
@@ -67,6 +71,8 @@
   &__logo-insta {
     display: block;
     text-decoration: none;
+
+    @include socials-logo-hover-scaling;
   }
 
   &__logo-insta-image {
@@ -104,6 +110,8 @@
     font-size: $fs-small;
     line-height: $lh-small;
     color: $text-color-dark;
+
+    @include footer-links-hover;
 
     &--weekends {
       margin-top: 20px;
@@ -145,6 +153,8 @@
   &__contacts-link {
     text-decoration: none;
     color: $text-color-dark;
+
+    @include footer-links-hover;
   }
 
   &__go-up-button_wrapper {
@@ -169,6 +179,8 @@
     background-size: 16px;
     background-position: center;
     background-repeat: no-repeat;
+
+    @include photo-hover-scaling;
 
     @include on-tablet {
       display: none;
@@ -222,6 +234,8 @@
     font-size: $fs-small;
     line-height: $lh-tight;
     color: $text-color-dark;
+
+    @include footer-links-hover;
   }
 
   &__nav-2 {
@@ -250,6 +264,8 @@
     font-size: $fs-small;
     line-height: $lh-tight;
     color: $text-color-dark;
+
+    @include footer-links-hover;
   }
 
   &__page-info {
