--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  // overflow: hidden;
+  overflow: hidden;
 
   @include content-padding-inline;
 
@@ -21,7 +21,7 @@
 
     @include on-desktop {
       display: block;
-      
+
       @include page-grid;
     }
   }
@@ -31,6 +31,11 @@
     background-size: cover;
     background-position: center;
     height: 600px;
+    transition: transform 0.3s ease-in-out;
+
+    &:hover {
+      transform: scale(0.97);
+    }
 
     &--1 {
       grid-column: span 4;
