--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -6,12 +6,22 @@
   background-size: 18px 12px;
   background-position: center;
   background-repeat: no-repeat;
+  image-rendering: crisp-edges;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: rotate(180deg);
+  }
 
   &--dropdown-open {
     position: absolute;
     top: 33px;
     left: 23px;
     z-index: 2;
+
+    &:hover {
+      transform: rotate(180deg);
+    }
 
     @include on-tablet {
       top: 39px;
