--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -96,10 +96,19 @@
     height: 50px;
     width: 50px;
     cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 
     @include on-tablet {
       height: 70px;
       width: 70px;
+    }
+
+    &:hover {
+      background-color: #d82602;
+    }
+
+    &:active {
+      background-color: #cf553d;
     }
   }
 }
