--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,7 +6,7 @@
 @import './blocks/page';
 @import './blocks/header';
 @import './blocks/icon';
-@import './blocks/main';
+@import './blocks/scroll-object';
 @import './blocks/section-title';
 @import './blocks/events';
 @import './blocks/exhibition';
@@ -49,4 +49,8 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 1000px #f9f9f9 inset;
   box-shadow: 0 0 0 1000px #f9f9f9 inset;
   color: #1b2129;
+}
+
+strong {
+  font-weight: $fw-semibold;
 }
