--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -47,29 +47,55 @@
   }
 }
 
+@mixin photo-hover-scaling {
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.07);
+  }
+}
+
+@mixin text-hover-scaling {
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.04);
+  }
+}
+
+@mixin socials-logo-hover-scaling {
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.09);
+  }
+}
+
+@mixin footer-links-hover {
+  transition: color 0.3s ease-in-out;
+
+  &:hover {
+    color: $rectangle-color;
+  }
+}
+
+@mixin header-effect {
+  animation: move-in 0.3s ease forwards;
+
+  @keyframes move-in {
+    from {
+      opacity: 0;
+      transform: translateY(-40px);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+}
+
 .fade-out {
   opacity: 0;
   transition: opacity 0.3s ease-out;
-}
-
-@keyframes bounce {
-  0%,
-  10% {
-    transform: rotate(-90deg) translateX(0);
-  }
-  20% {
-    transform: rotate(-90deg) translateX(-5px);
-  }
-  30% {
-    transform: rotate(-90deg) translateX(0);
-  }
-  40% {
-    transform: rotate(-90deg) translateX(-3px);
-  }
-  50% {
-    transform: rotate(-90deg) translateX(0);
-  }
-  100% {
-    transform: rotate(-90deg) translateX(0);
-  }
 }
