--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,13 +1,8 @@
-h1 {
-  @extend %h1;
-}
-
+// Main colors
 $text-color-dark: #0f0e08;
 $text-color-light: #687480;
 $accent-color: #1a5a4c;
 $rectangle-color: #f14a27;
-$font-primary: 'Montserrat', serif;
-$font-secondary: 'IBM Plex Sans', serif;
 
 // Font sizes
 $fs-base: 16px;
