--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -36,8 +36,6 @@
     background-color: #fff;
     background-clip: content-box;
 
-    // filter: drop-shadow(0px 2px 0px 0px $accent-color40);
-
     @include on-tablet {
       height: 204px;
       padding-inline: 65px;
@@ -56,6 +54,23 @@
     }
   }
 
+  &__shadow-container {
+    position: absolute;
+    bottom: 0;
+    height: 20px;
+    width: calc(100% - 40px); // Full width minus inline paddings
+    box-shadow: 0 2px 0 0 #1a5a4c40;
+    z-index: -1;
+
+    @include on-tablet {
+      width: calc(100% - 130px);
+    }
+
+    @include on-desktop {
+      width: calc(100% - 710px);
+    }
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
@@ -68,7 +83,6 @@
     }
 
     @include on-desktop {
-      // align-items: center;
       padding-left: 0;
     }
   }
@@ -89,7 +103,7 @@
     }
 
     @include on-desktop {
-      margin-top: 0; 
+      margin-top: 0;
       gap: 130px;
     }
   }
