--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -1,15 +1,14 @@
 .section-title {
+  display: inline-block;
   font-family: $font-primary;
   font-size: $fs-large;
   line-height: $lh-heading;
   margin: 0;
   text-align: center;
 
-  // margin-top: 70px;
   margin-bottom: 40px;
 
   @include on-tablet {
-    // margin-top: 88px;
     margin-bottom: 48px;
     text-align: left;
     font-size: 48px;
@@ -17,17 +16,19 @@
   }
 
   @include on-desktop {
-    // margin-top: 120px;
     margin-bottom: 56px;
   }
 
   &--subscription {
     color: #fff;
     margin-bottom: 20px;
+    display: block;
 
     @include on-tablet {
       text-align: center;
       margin-bottom: 16px;
     }
   }
+
+  @include text-hover-scaling;
 }
