--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,7 +1,3 @@
-.gallery {
-  overflow: hidden;
-}
-
 .simple-slider {
   position: relative;
 
@@ -24,6 +20,11 @@
   max-width: 100%;
   padding: 0 10px;
   box-sizing: border-box;
+
+  @include on-tablet {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
 }
 
 .slide img {
@@ -45,16 +46,9 @@
   border-radius: 50%;
   margin: 0 5px;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 
 .dot.active {
-  background: #666;
-}
-
-@media (min-width: 640px) {
-  .slide {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
+  background-color: #666;
 }
