--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import './utils/utils';
+@import './utils/fonts';
+@import './utils/typography';
+@import './utils/vars';
+@import 'blocks/page';
+@import 'blocks/top-bar';
+@import 'blocks/header';
+@import 'blocks/section-title';
+@import 'blocks/main-content';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/current-events';
+@import 'blocks/gallery.scss';
+@import 'blocks/subscription.scss';
+@import 'blocks/footer.scss';
 
 body {
   background: $c-gray;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
